--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,9 @@
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
+  },
+  "devDependencies": {
+    "chai": "^6.0.1",
+    "mocha": "^11.7.1"
   }
 }
