--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha *.test.js",
-    "devStart": "nodemon index.js"
+    "devStart": "NODE_ENV=development nodemon index.js",
+    "testStart": "NODE_ENV=test node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
